maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:11: error: value unary_! is not a member of Unit
  while(!isGridFull){
        ^ShortestPathMaze:38: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return false
             ^ShortestPathMaze:38: warning: enclosing method isGridFull has result type Unit: return value discarded
      return false
      ^ShortestPathMaze:41: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return true
         ^ShortestPathMaze:41: warning: enclosing method isGridFull has result type Unit: return value discarded
  return true
  ^